--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Song Studio - Styler (ES Modules)</title>
+
+  <!-- favicon -->
+  <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
   
   <!-- External CSS -->
   <link rel="stylesheet" href="css/styles.css" />
@@ -68,11 +71,6 @@
     </div>
   </div>
 
-  <!-- 
-       1) We do NOT load "styler.js" directly as a separate script here.
-       2) We load "page-styler.js" as a module. 
-          It will IMPORT from styler.js. 
-  -->
   <script type="module" src="js/page-styler.js"></script>
 </body>
 </html>
