--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
         rows="5"
         readonly
       ></textarea>
+      <!-- New copy button -->
+      <button class="copy-button" id="include-copy">Copy</button>
       <div class="char-label" id="include-char-counter">0/200</div>
     </div>
 
@@ -67,6 +69,8 @@
         rows="5"
         readonly
       ></textarea>
+      <!-- New copy button -->
+      <button class="copy-button" id="exclude-copy">Copy</button>
       <div class="char-label" id="exclude-char-counter">0/200</div>
     </div>
   </div>
