--- a/visualizer/index.html
+++ b/visualizer/index.html
@@ -56,4 +56,7 @@
 
   <!-- Centered play/pause button -->
   <div class="playback-controls">
-    <button id="play-p
+    <button id="play-pause-button" title="Play/Pause">▶</button>
+  </div>
+</body>
+</html>
