--- a/visualizer/index.html
+++ b/visualizer/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Song Studio - Visualizer</title>
 
-  <!-- Basic theme CSS (if you have one) -->
+  <!-- favicon -->
+  <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
+  <!-- Basic theme CSS -->
   <link rel="stylesheet" href="../css/styles.css" />
   <!-- Local overrides -->
   <link rel="stylesheet" href="visualizer.css" />
